Add test setters to ValidatorPolicyAdvisor for unit test use (#7611)
* Add test setters to ValidatorPolicyAdvisor for unit test use

Add setValidationSettingsForUnitTest and setFhirContextForUnitTest
to allow instantiating ValidatorPolicyAdvisor outside of a Spring
context without NPEs on the @Autowired fields.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* spotless

---------

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>